# product-review-analyzer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  integration-tests.yml
alembic/: env.py
alembic/versions/: 4aafb3cb5090_initial_migration_with_autoincrement_.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: health.py  products.py  search.py
app/core/: config.py  exceptions.py  logging.py
app/models/: database.py
app/models/database/: __init__.py  base.py  product.py  review.py  review_image.py
app/schemas/: __init__.py  api.py  vistaprint.py
app/services/: data_service.py  gcs_service.py  llm.py  scraper.py  storage.py  vector_db.py  vistaprint_scraper.py
credentials/: README.md
scripts/: init_db.py  run_tests.py
tests/: __init__.py  conftest.py  test_api.py  test_gcs_service.py
tests/api/: test_api_basic.py  test_gcs_api_integration.py
tests/integration/: test_gcs_integration.py  test_gcs_vistaprint_integration.py
tests/unit/: test_config.py  test_schemas.py
